fixed the delete button because it had overlapping names - next itme have better css names please

--- a/src/Components/Main/FolderEditor/FolderEditor.css
+++ b/src/Components/Main/FolderEditor/FolderEditor.css
@@ -32,7 +32,7 @@
     width: 450px;
 }
   
-.remove-button {
+.delete-button {
     background-color: grey;
     width: 4vh;
     align-items: center;
@@ -42,7 +42,7 @@
     z-index: 999;
 }
 
-.remove-button:hover{
+.delete-button:hover{
     background-color: red;
 }
 
